@startuml

title Botones

hide empty members

class BotonMusica {
    + {static} BotonMusica(reproductor: Reproductor, cancion: Cancion): BotonMusica
}

class BotonPais {
    - boton: Button
    - pais: Pais
    - colores: ArrayList
    + {static} BotonPais(pais, posicionX, posicionY, ancho, alto, colores, paisesSeleccionados): BotonPais
}

MenuMusica ..> BotonMusica
Mapa ..> BotonPais

@enduml